--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li class="current"><a href="index.html">Home</a><li>
             <li><a href="about.html">About</a><li>
             <li><a href="services.html">Our Music</a><li>
+            <li><a href="demo.html">Demo</a><li>
             </ul>
             </nav>
           </div>
@@ -81,6 +82,8 @@
    </script>
 
  </body>
+
+<p><a href="demo.html">Youtube Demo</a> this is a link to the youtube demo page on this website.</p>
 
  <iframe width="420" height="315"
 src="https://www.youtube.com/embed/WpwIXRF4ZZk">
